# indicator-countdown

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO
resources/: about_dialog.glade  com.kreuzman.indicator.countdown.gschema.xml  menu.glade  preferences_dialog_gui.glade
src/: about_dialog.c  about_dialog.h  countdown.c  countdown.h  indicator-countdown.c  indicator.c  indicator.h  indicator_countdown.c  main.c  menu_glade.c  preferences_dialog.c  preferences_dialog.h  settings.c  settings.h
